--- a/styles/styleKarolina.css
+++ b/styles/styleKarolina.css
@@ -18,7 +18,7 @@
 
 .mobile {
   width: 100%;
-  margin-top: 70px;
+  /* margin-top: 70px; */
 }
 
 .burgerMenuDesktop {
